--- a/.github/workflows/terraform-usecase-10.yml
+++ b/.github/workflows/terraform-usecase-10.yml
@@ -1,12 +1,12 @@
-name: ECS Fargate Alb Terraform Gitub UC-8
+name: ECS Fargate ALB Terraform UC-8
 
 on:
   push:
     paths:
       - '**'
       - '.github/workflows/terraform-usecase-10.yaml'
-    branches: main
-  
+    branches: [main]
+
 permissions:
   id-token: write
   contents: write
@@ -17,7 +17,7 @@ jobs:
     steps:
       - name: Code checkout
         uses: actions/checkout@v4.2.2
-        with: 
+        with:
           ref: ${{ github.head_ref }}
 
       - name: Setup Terraform
@@ -29,20 +29,34 @@ jobs:
           aws-region: ${{ secrets.AWS_REGION }}
           role-to-assume: ${{ secrets.OIDC_ROLE }}
 
+      - name: Login to Amazon ECR
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@v2
+
+      - name: Build and Push appointment-service
+        run: |
+          docker build -t ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/node-appointment:latest ./microservices/appointment-service
+          docker push ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/node-appointment:latest
+
+      - name: Build and Push patient-service
+        run: |
+          docker build -t ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/node-patient:latest ./microservices/patient-service
+          docker push ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/node-patient:latest
+
       - name: Setup Python for Checkov
         uses: actions/setup-python@v5.6.0
 
       - name: Install Checkov
         run: pip install checkov
 
-      - name: Run Checkon Scan
-        run: checkov -d . --framework terraform --soft-fail  --output json > checkov_result.json
+      - name: Run Checkov Scan
+        run: checkov -d . --framework terraform --soft-fail --output json > checkov_result.json
 
-      - name: Upload build artifact
+      - name: Upload Checkov Artifact
         uses: actions/upload-artifact@v4.6.2
         with:
-         name: checkov-info
-         path: checkov_result.json
+          name: checkov-info
+          path: checkov_result.json
 
       - name: Setup Node.js
         uses: actions/setup-node@v3
@@ -59,10 +73,9 @@ jobs:
       - name: Generate Terraform Docs and Commit
         run: |
           git config --local user.email ${{ secrets.EMAIL }}
-          git config --local user.name ${{ secrets.USER_NAME }}
+          git config --local user.name ${{ secrets.user }}
           terraform-docs markdown table . > README.md.new
           mv README.md.new README.md
-
           if [ -f README.md ]; then
             git add README.md
             if git commit -m "docs: Update README.md"; then
@@ -73,7 +86,6 @@ jobs:
             fi
           else
             echo "README.md was not generated."
-          fi
 
       - name: Update Pull Request
         uses: actions/github-script@v7
@@ -87,56 +99,47 @@ jobs:
             #### Terraform Initialization \`${{ steps.init.outcome }}\`
             #### Terraform Validation \`${{ steps.validate.outcome }}\`
             #### Terraform Plan \`${{ steps.plan.outcome }}\`
-
             <details><summary>Show Plan</summary>
-
-            \`\`\`\n
-            ${process.env.PLAN}
             \`\`\`
 
+            ${process.env.PLAN}
+            \`\`\`
             </details>
-
             *Pushed by: @${{ github.actor }}, Action: \`${{ github.event_name }}\`*`;
-
             github.rest.issues.createComment({
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
               body: output
             })
-      
+
       - name: Read README.md content
-        id: readme_content # Assign an ID to reference this step's outputs
+        id: readme_content
         run: |
-          # Use 'cat' to read the file and store it in an environment variable, then echo it to GITHUB_OUTPUT
-          # We're careful here to handle multiline content by escaping newlines
-          # and using a delimiter for the output variable.
           README=$(cat README.md)
           echo "readme<<EOF" >> $GITHUB_OUTPUT
           echo "$README" >> $GITHUB_OUTPUT
           echo "EOF" >> $GITHUB_OUTPUT
 
       - name: Post README.md content to Pull Request
-        uses: actions/github-script@v7 # Action to run JavaScript in your workflow
-        if: github.event_name == 'pull_request' # Ensure this only runs for PR events
+        uses: actions/github-script@v7
+        if: github.event_name == 'pull_request'
         env:
-          # Get the README content from the output of the previous step
           README_BODY: "${{ steps.readme_content.outputs.readme }}"
         with:
-          github-token: ${{ secrets.GIT_TOKEN }} # GitHub token for authentication
+          github-token: ${{ secrets.GIT_TOKEN }}
           script: |
             const output = `#### Current README.md Content
-            
+
             <details><summary>Show README.md</summary>
-            
+
             \`\`\`markdown
             ${process.env.README_BODY}
             \`\`\`
-            
-            </details>
-            
-            *Posted by: @${{ github.actor }}, Action: \`${{ github.event_name }}\`*`;
 
+            </details>
+
+            *Posted by: @${{ github.actor }}, Action: \`${{ github.event_name }}\`*`;
             github.rest.issues.createComment({
               issue_number: context.issue.number,
               owner: context.repo.owner,
@@ -144,19 +147,19 @@ jobs:
               body: output
             })
 
-      - name: Upload Artifacts
+      - name: Upload Terraform Docs Artifact
         uses: actions/upload-artifact@v4.6.2
         with:
           name: terraform-docs
           path: usecase-8/README.md
-          
-      - name: Add README.md
+
+      - name: Add README.md to PR
         uses: peter-evans/create-pull-request@v7.0.8
         with:
           token: ${{ secrets.GIT_TOKEN }}
           body: |
             ## Terraform Docs ##
-            ```
+            \`\`\`
             ${{ steps.readme.outputs.content }}
 
       - name: Terraform test
@@ -164,7 +167,6 @@ jobs:
           terraform init
           terraform test
 
-      
       - name: Extract action from commit message
         id: get_action
         run: |
@@ -175,21 +177,18 @@ jobs:
             echo "action=destroy" >> $GITHUB_OUTPUT
           else
             echo "action=none" >> $GITHUB_OUTPUT
-          fi
 
-      - name: Initiate terraform
+      - name: Terraform Init and Plan
         run: |
           terraform init
           terraform fmt -recursive
           terraform validate
           terraform plan -var-file=terraform.tfvars
-          
+
       - name: Terraform Apply
         if: ${{ steps.get_action.outputs.action == 'apply' }}
-        run: |
-          terraform apply -auto-approve
+        run: terraform apply -auto-approve
 
-      - name: Terraform destroy
+      - name: Terraform Destroy
         if: ${{ steps.get_action.outputs.action == 'destroy' }}
-        run: |
-          terraform destroy -auto-approve
+        run: terraform destroy -auto-approve
