--- a/.github/workflows/terraform-usecase-10.yml
+++ b/.github/workflows/terraform-usecase-10.yml
@@ -191,7 +191,10 @@ jobs:
         if: ${{ steps.get_action.outputs.action == 'apply' }}
         run: terraform apply -auto-approve
 
-
+      - name: Login to Amazon ECR
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@v2
+        
       - name: Build and Push appointment-service
         if: steps.get_action.outputs.action == 'apply'
         run: |
