--- a/.github/workflows/terraform-usecase-10.yml
+++ b/.github/workflows/terraform-usecase-10.yml
@@ -90,16 +90,16 @@ jobs:
       #     terraform init
       #     terraform test
 
-      # - name: Extract action from commit message
-      #   id: get_action
-      #   run: |
-      #     COMMIT_MSG=$(git log -1 --pretty=%B)
-      #     if [[ "$COMMIT_MSG" == *"terraform:apply"* ]]; then
-      #       echo "action=apply" >> $GITHUB_OUTPUT
-      #     elif [[ "$COMMIT_MSG" == *"terraform:destroy"* ]]; then
-      #       echo "action=destroy" >> $GITHUB_OUTPUT
-      #     else
-      #       echo "action=none" >> $GITHUB_OUTPUT
+      - name: Extract action from commit message
+        id: get_action
+        run: |
+          COMMIT_MSG=$(git log -1 --pretty=%B)
+          if [[ "$COMMIT_MSG" == *"terraform:apply"* ]]; then
+            echo "action=apply" >> $GITHUB_OUTPUT
+          elif [[ "$COMMIT_MSG" == *"terraform:destroy"* ]]; then
+            echo "action=destroy" >> $GITHUB_OUTPUT
+          else
+            echo "action=none" >> $GITHUB_OUTPUT
 
       - name: Terraform Init, Format, Validate, and Plan
         run: |
