--- a/.github/workflows/terraform-usecase-10.yml
+++ b/.github/workflows/terraform-usecase-10.yml
@@ -58,39 +58,105 @@ jobs:
           tar -xzf terraform-docs.tar.gz
           chmod +x terraform-docs
           sudo mv terraform-docs /usr/local/bin/
-
       - name: Generate Terraform Docs and Commit
-        env:
-          GITHUB_TOKEN: ${{ secrets.GIT_TOKEN }}
         run: |
+          git config --local user.email ${{ secrets.EMAIL }}
+          git config --local user.name ${{ secrets.USER_NAME }}
           terraform-docs markdown table . > README.md.new
           mv README.md.new README.md
           if [ -f README.md ]; then
-            git config --global user.email "${{ secrets.EMAIL }}"
-            git config --global user.name "${{ secrets.user }}"
             git add README.md
-            if git diff --cached --quiet; then
-              echo "No README.md changes to commit."
-            else
-              git commit -m "docs: Update README.md"
-              git push https://x-access-token:${{ secrets.GIT_TOKEN }}@github.com/${{ github.repository }} HEAD:${{ github.ref_name }}
+            if git commit -m "docs: Update README.md"; then
+              git push
               echo "Successfully committed and pushed README.md changes."
+            else
+              echo "No README.md changes to commit."
             fi
           else
             echo "README.md was not generated."
-
-      - name: Upload Terraform Docs Artifact
+          fi
+      - name: Update Pull Request
+        uses: actions/github-script@v7
+        if: github.event_name == 'pull_request'
+        env:
+          PLAN: "terraform\n${{ steps.plan.outputs.stdout }}"
+        with:
+          github-token: ${{ secrets.GIT_TOKEN }}
+          script: |
+            const output = `#### Terraform Format and Style \`${{ steps.fmt.outcome }}\`
+            #### Terraform Initialization \`${{ steps.init.outcome }}\`
+            #### Terraform Validation \`${{ steps.validate.outcome }}\`
+            #### Terraform Plan \`${{ steps.plan.outcome }}\`
+            <details><summary>Show Plan</summary>
+            \`\`\`\n
+            ${process.env.PLAN}
+            \`\`\`
+            </details>
+            *Pushed by: @${{ github.actor }}, Action: \`${{ github.event_name }}\`*`;
+            github.rest.issues.createComment({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: output
+            })
+      
+      - name: Read README.md content
+        id: readme_content # Assign an ID to reference this step's outputs
+        run: |
+          # Use 'cat' to read the file and store it in an environment variable, then echo it to GITHUB_OUTPUT
+          # We're careful here to handle multiline content by escaping newlines
+          # and using a delimiter for the output variable.
+          README=$(cat README.md)
+          echo "readme<<EOF" >> $GITHUB_OUTPUT
+          echo "$README" >> $GITHUB_OUTPUT
+          echo "EOF" >> $GITHUB_OUTPUT
+      - name: Post README.md content to Pull Request
+        uses: actions/github-script@v7 # Action to run JavaScript in your workflow
+        if: github.event_name == 'pull_request' # Ensure this only runs for PR events
+        env:
+          # Get the README content from the output of the previous step
+          README_BODY: "${{ steps.readme_content.outputs.readme }}"
+        with:
+          github-token: ${{ secrets.GIT_TOKEN }} # GitHub token for authentication
+          script: |
+            const output = `#### Current README.md Content
+            
+            <details><summary>Show README.md</summary>
+            
+            \`\`\`markdown
+            ${process.env.README_BODY}
+            \`\`\`
+            
+            </details>
+            
+            *Posted by: @${{ github.actor }}, Action: \`${{ github.event_name }}\`*`;
+            github.rest.issues.createComment({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: output
+            })
+      - name: Upload Artifacts
         uses: actions/upload-artifact@v4.6.2
         with:
           name: terraform-docs
-          path: usecase-8/README.md
-
+          path: README.md
+          
+      - name: Add README.md
+        uses: peter-evans/create-pull-request@v7.0.8
+        with:
+          token: ${{ secrets.GIT_TOKEN }}
+          body: |
+            ## Terraform Docs ##
+            ```
+            ${{ steps.readme.outputs.content }}
       - name: Terraform test
         run: |
           terraform init
           terraform test
-
-      - name: Determine Terraform Action
+      
+      - name: Extract action from commit message
+        id: get_action
         run: |
           COMMIT_MSG=$(git log -1 --pretty=%B)
           if [[ "$COMMIT_MSG" == *"terraform:apply"* ]]; then
@@ -100,9 +166,6 @@ jobs:
           else
             echo "action=none" >> $GITHUB_OUTPUT
           fi
-
-      - name: Debug Action Output
-        run: echo "Action is ${{ steps.get_action.outputs.action }}"
 
       - name: Terraform Init, Format, Validate, and Plan
         run: |
