--- a/microservices/patient-service/Dockerfile
+++ b/microservices/patient-service/Dockerfile
@@ -12,6 +12,6 @@ RUN npm init
 
 RUN npm install express
 
-EXPOSE 3001
+EXPOSE 3000
 
-CMD ["node", "appointment-service.js"]
+CMD ["node", "patient-service.js"]
